# what_weather

./: Dockerfile  Dockerfile_bot  Dockerfile_what_weather  README.md  docker-compose.yml  pyproject.toml
nginx/conf/: default.conf.template
requirements/: base.txt  dev.txt
templates/weather/: index.html
what_weather/: __init__.py  __main__.py  app_factory.py  auth.py  config.py  database_models.py  db.py  redis_cache.py  schema.sql  telegram_bot.py  weather.py
what_weather/static/: style.css
what_weather/templates/: base.html
what_weather/templates/auth/: login.html  register.html
what_weather/templates/weather/: history.html  index.html
